examples/test/testpolicy13017.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13017
  namespace: namespace263
spec:
  podSelector:
    matchLabels:
      key21: value3
      key41: value34
      key10: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value44
          key40: value18
          key33: value16
